--- a/.github/workflows/parser.yml
+++ b/.github/workflows/parser.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      working-directory: ./lib
+      working-directory: ./src/parser
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-      working-directory: ./lib
+      working-directory: ./src/parser
